2011-04-08  Xiaomei Ji  <xji@chromium.org>

Reviewed by David Hyatt.

        Local caret rectangle calculation should be relative to its containing block.
        https://bugs.webkit.org/show_bug.cgi?id=49508.

        * fast/forms/cursor-at-editable-content-boundary-expected.txt: Added.
        * fast/forms/cursor-at-editable-content-boundary.html: Added.
2011-04-08  Xiaomei Ji  <xji@chromium.org>

        Reviewed by David Hyatt.

        Local caret rectangle calculation should be relative to its containing block.
        https://bugs.webkit.org/show_bug.cgi?id=49508.

        InlineBox and caret rectangle are positioned relative to its containing block.
        So its left and right edge value should be relative to its containing block as well.

        Test: fast/forms/cursor-at-editable-content-boundary.html

        * rendering/RenderText.cpp:
        (WebCore::RenderText::localCaretRect):


Canonical link: https://commits.webkit.org/73121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83348 268f45cc-cd09-0410-ab3c-d52691b4dbfc